justificativa mais detalhada